--- a/src/components/Nav/Nav.module.css
+++ b/src/components/Nav/Nav.module.css
@@ -1,4 +1,20 @@
 .nav{
     background-color: rgb(108, 164, 164);
+    align-items: center;
     border-radius: 5px;
+    display: flex;
+    justify-content: space-around;
+}
+
+.links{
+    display: flex;
+    justify-content: space-around;
+    flex-direction: row;
+}
+
+.link{
+    text-decoration: none;
+    margin: 0px 15px;
+    color: black;
+    font-weight: bold;
 }
